<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Z-Way for Android is a UI for Z-Way server
  ~
  ~ Created by Ivan Platonov on 22.06.14 23:00.
  ~ Copyright (c) 2014 Z-Wave.Me
  ~
  ~ All rights reserved
  ~ info@z-wave.me
  ~ Z-Way for Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Z-Way for Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Z-Way for Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profiles_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/profile_name"/>

            <EditText android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"/>

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="6dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textColor="@color/profile_text_hint_color"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:text="@string/profile_indoor_server"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="48dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:text="@string/profile_url"/>

            <EditText android:id="@+id/profile_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textUri"
                android:hint="@string/profile_http"/>

            <ImageButton android:id="@+id/scan_network"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_search"
                android:layout_marginRight="4dp"
                android:background="@android:drawable/list_selector_background"/>

        </LinearLayout>

        <TextView android:id="@+id/profile_url_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textColor="@color/profile_text_hint_color"
            android:textSize="12sp"
            android:text="@string/profile_http_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="6dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textColor="@color/profile_text_hint_color"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:text="@string/profile_credentials"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/profile_login"/>

            <EditText android:id="@+id/profile_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/profile_password"/>

            <EditText android:id="@+id/profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"/>

        </LinearLayout>

        <TextView android:id="@+id/profile_credentials_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textColor="@color/profile_text_hint_color"
            android:textSize="12sp"
            android:text="@string/profile_credentials_hint"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/divider_color"/>

        <RelativeLayout android:id="@+id/profile_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <ImageView android:id="@+id/profile_location_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/right_arrow"
                android:scaleType="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toLeftOf="@id/profile_location_arrow"
                android:gravity="center_vertical">

                <TextView android:id="@+id/profile_location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/profile_location"/>

                <TextView android:id="@+id/profile_location_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/profile_text_hint_color"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:text="@string/profile_location"
                    android:visibility="gone"/>

                </LinearLayout>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/divider_color"/>

        <RelativeLayout android:id="@+id/profile_app_theme"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <View android:id="@+id/profile_app_theme_color"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@color/main_app_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toLeftOf="@id/profile_app_theme_color"
                android:gravity="center_vertical">

                <TextView android:id="@+id/profile_app_theme_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/theme_default_name"/>

                <TextView android:id="@+id/profile_app_theme_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/profile_text_hint_color"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:text="@string/profile_app_theme_description"
                    android:visibility="visible"/>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            android:layout_marginBottom="30dp"/>

        <LinearLayout android:id="@+id/profile_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="48dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:background="@color/white"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:text="@string/profile_delete"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"/>

            </LinearLayout>

        </LinearLayout>


</ScrollView>