<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Z-Way for Android is a UI for Z-Way server
  ~
  ~ Created by Ivan Platonov on 15.10.14 23:22.
  ~ Copyright (c) 2014 Z-Wave.Me
  ~
  ~ All rights reserved
  ~ info@z-wave.me
  ~ Z-Way for Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Z-Way for Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Z-Way for Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:text="@string/dialog_connection_lose_msg"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView android:id="@+id/connection_lose_close_app"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:drawable/list_selector_background"
            android:textSize="16sp"
            android:text="@string/dialog_connection_lose_close_app"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/divider_color"/>

        <TextView android:id="@+id/connection_lose_open_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@android:drawable/list_selector_background"
            android:textSize="16sp"
            android:text="@string/dialog_connection_lose_settings"/>

        </LinearLayout>

</LinearLayout>